Fixade IntellIJ saker som den föreslog.